feat : implement RabbitMQ consumer for crawler service